Update Inventory full message to make more sense, it isn't only while trading.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,10 @@
         "DropDownList1",
         "WorldFrame",
         "GameTooltip_SetDefaultAnchor",
-        "CLOSE"
+        "CLOSE",
+        "ERR_TRADE_BAG_FULL"
+    ],
+    "Lua.diagnostics.disable": [
+        "assign-type-mismatch"
     ]
 }
